// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.google.homesampleapp";
option java_multiple_files = true;

// Info about the dynamic state of a Matter device that is persisted in a Proto DataStore.
message DeviceState {
    // Timestamp when the state was captured.
    google.protobuf.Timestamp date_captured = 1;

    // Device ID within the app's fabric.
    int64 device_id = 2;

    // Whether the device is offline (false) or online (true)
    bool online = 3;

    // Whether the device is off (false) or on (true). Value should be disregarded
    // if device is offline.
    bool on = 4;
}

message DevicesState {
  repeated DeviceState devices_state = 2;
}